# flutter_chess

./: ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  USER_MANUAL.md  pubspec.yaml
.github/ISSUE_TEMPLATE/: -🐞-bug-report.md
.github/workflows/: flutter-ci.yml
android/app/: build.gradle
android/app/src/main/cpp/: CMakeLists.txt  openssl_stubs.cpp
android/app/src/main/cpp/aegis_lean/: Aegis.cpp  Aegis.h  AegisFlutterSDK.cpp  AegisFlutterSDK.h
android/app/src/main/cpp/include/: dns_sd.h
ios/: AegisCore.podspec  Podfile
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/blocs/: chess_cubit.dart  chess_state.dart
lib/components/: chess_piece_widget.dart
lib/data/mocks/: mock_aegis_service.dart
lib/game/: chess_board.dart  chess_game.dart  chess_piece.dart  chess_piece_svg.dart  game_controller.dart  move_validator.dart  position.dart
lib/models/: captured_piece.dart  chess_move.dart  player_color.dart
lib/screens/: chess_board_widget.dart  chess_game_screen.dart  chess_screen.dart  game_hud.dart  landing_page.dart  user_profile.dart
lib/utils/: audio_service.dart  check_detector.dart  position_utils.dart
lib/widgets/: captured_pieces_display.dart  flutter_chess_board.dart  game_end_dialog.dart  permission_guard.dart  promotion_dialog.dart  review_controls.dart
linux/: CMakeLists.txt
macos/Runner.xcodeproj/: project.pbxproj
test/: check_rules_test.dart  chess_game_test.dart  game_logic_test.dart  widget_test.dart
windows/runner/: Runner.rc
(+18 files in other folders)
